cmake_minimum_required(VERSION 3.13)
project(rust_protobuf)

set(CMAKE_CXX_STANDARD 14)

add_executable(rust_protobuf
        ci/env-debug.sh
        ci/install-protobuf.sh
        ci/run.sh
        interop/cxx/interop.cc
        perftest/bytes/benches/vs.rs
        perftest/bytes/src/lib.rs
        perftest/bytes/src/messages.proto
        perftest/bytes/build.rs
        perftest/bytes/Cargo.toml
        perftest/vs-cxx/perftest-cxx.cxx
        proto/google/protobuf/compiler/plugin.proto
        proto/google/protobuf/any.proto
        proto/google/protobuf/api.proto
        proto/google/protobuf/descriptor.proto
        proto/google/protobuf/duration.proto
        proto/google/protobuf/empty.proto
        proto/google/protobuf/fetch-protos.sh
        proto/google/protobuf/field_mask.proto
        proto/google/protobuf/source_context.proto
        proto/google/protobuf/struct.proto
        proto/google/protobuf/timestamp.proto
        proto/google/protobuf/type.proto
        proto/google/protobuf/wrappers.proto
        proto/rustproto.proto
        protobuf/benches/coded_input_stream.rs
        protobuf/benches/coded_output_stream.rs
        protobuf/src/json/base64.rs
        protobuf/src/json/float.rs
        protobuf/src/json/json_name.rs
        protobuf/src/json/mod.rs
        protobuf/src/json/parse.rs
        protobuf/src/json/print.rs
        protobuf/src/json/rfc_3339.rs
        protobuf/src/json/well_known_wrapper.rs
        protobuf/src/reflect/accessor/map.rs
        protobuf/src/reflect/accessor/mod.rs
        protobuf/src/reflect/accessor/repeated.rs
        protobuf/src/reflect/accessor/singular.rs
        protobuf/src/reflect/enums.rs
        protobuf/src/reflect/field.rs
        protobuf/src/reflect/find_message_or_enum.rs
        protobuf/src/reflect/map.rs
        protobuf/src/reflect/message.rs
        protobuf/src/reflect/mod.rs
        protobuf/src/reflect/reflect_deep_eq.rs
        protobuf/src/reflect/repeated.rs
        protobuf/src/reflect/rt.rs
        protobuf/src/reflect/runtime_type_box.rs
        protobuf/src/reflect/runtime_type_dynamic.rs
        protobuf/src/reflect/runtime_types.rs
        protobuf/src/reflect/transmute_eq.rs
        protobuf/src/reflect/type_dynamic.rs
        protobuf/src/reflect/types.rs
        protobuf/src/reflect/value.rs
        protobuf/src/text_format/lexer/float.rs
        protobuf/src/text_format/lexer/int.rs
        protobuf/src/text_format/lexer/json_number_lit.rs
        protobuf/src/text_format/lexer/lexer_impl.rs
        protobuf/src/text_format/lexer/loc.rs
        protobuf/src/text_format/lexer/mod.rs
        protobuf/src/text_format/lexer/num_lit.rs
        protobuf/src/text_format/lexer/parser_language.rs
        protobuf/src/text_format/lexer/str_lit.rs
        protobuf/src/text_format/lexer/token.rs
        protobuf/src/text_format/lexer/tokenizer.rs
        protobuf/src/text_format/mod.rs
        protobuf/src/text_format/parse.rs
        protobuf/src/text_format/print.rs
        protobuf/src/well_known_types/any.rs
        protobuf/src/well_known_types/api.rs
        protobuf/src/well_known_types/duration.rs
        protobuf/src/well_known_types/empty.rs
        protobuf/src/well_known_types/field_mask.rs
        protobuf/src/well_known_types/mod.rs
        protobuf/src/well_known_types/source_context.rs
        protobuf/src/well_known_types/struct_pb.rs
        protobuf/src/well_known_types/timestamp.rs
        protobuf/src/well_known_types/type_pb.rs
        protobuf/src/well_known_types/wrappers.rs
        protobuf/src/buf_read_iter.rs
        protobuf/src/buf_read_or_reader.rs
        protobuf/src/cached_size.rs
        protobuf/src/chars.rs
        protobuf/src/clear.rs
        protobuf/src/core.rs
        protobuf/src/descriptor.rs
        protobuf/src/enums.rs
        protobuf/src/error.rs
        protobuf/src/ext.rs
        protobuf/src/lazy.rs
        protobuf/src/lib.rs
        protobuf/src/misc.rs
        protobuf/src/oneof.rs
        protobuf/src/paginate.rs
        protobuf/src/plugin.rs
        protobuf/src/prelude.rs
        protobuf/src/repeated.rs
        protobuf/src/rt.rs
        protobuf/src/rustproto.rs
        protobuf/src/singular.rs
        protobuf/src/stream.rs
        protobuf/src/unknown.rs
        protobuf/src/varint.rs
        protobuf/src/wire_format.rs
        protobuf/src/zigzag.rs
        protobuf/build.rs
        protobuf/Cargo.toml
        protobuf/LICENSE.txt
        protobuf/README.md
        protobuf/regenerate.sh
        protobuf-codegen/src/bin/protobuf-bin-gen-rust-do-not-use.rs
        protobuf-codegen/src/bin/protoc-gen-rust.rs
        protobuf-codegen/src/amend_io_error_util.rs
        protobuf-codegen/src/case_convert.rs
        protobuf-codegen/src/code_writer.rs
        protobuf-codegen/src/compiler_plugin.rs
        protobuf-codegen/src/customize.rs
        protobuf-codegen/src/enums.rs
        protobuf-codegen/src/extensions.rs
        protobuf-codegen/src/field.rs
        protobuf-codegen/src/file.rs
        protobuf-codegen/src/file_and_mod.rs
        protobuf-codegen/src/file_descriptor.rs
        protobuf-codegen/src/inside.rs
        protobuf-codegen/src/lib.rs
        protobuf-codegen/src/map.rs
        protobuf-codegen/src/message.rs
        protobuf-codegen/src/oneof.rs
        protobuf-codegen/src/protobuf_name.rs
        protobuf-codegen/src/rust.rs
        protobuf-codegen/src/rust_name.rs
        protobuf-codegen/src/rust_types_values.rs
        protobuf-codegen/src/scope.rs
        protobuf-codegen/src/serde.rs
        protobuf-codegen/src/strx.rs
        protobuf-codegen/src/syntax.rs
        protobuf-codegen/src/well_known_types.rs
        protobuf-codegen/Cargo.toml
        protobuf-codegen/LICENSE.txt
        protobuf-codegen/README.md
        protobuf-codegen-pure/src/bin/parse-and-typecheck.rs
        protobuf-codegen-pure/src/convert.rs
        protobuf-codegen-pure/src/lib.rs
        protobuf-codegen-pure/src/model.rs
        protobuf-codegen-pure/src/parser.rs
        protobuf-codegen-pure/src/test_against_protobuf_protos.rs
        protobuf-codegen-pure/Cargo.toml
        protobuf-codegen-pure/LICENSE.txt
        protobuf-codegen-pure/README.md
        protobuf-codegen-pure-test/src/common/mod.rs
        protobuf-codegen-pure-test/src/lib.rs
        protobuf-codegen-pure-test/build.rs
        protobuf-codegen-pure-test/Cargo.toml
        protobuf-codegen-pure-test/test.sh
        protobuf-fuzz/fuzz/fuzz_targets/all.rs
        protobuf-fuzz/fuzz/fuzz_targets/empty_message.rs
        protobuf-fuzz/fuzz/fuzz_targets/empty_message_read.rs
        protobuf-fuzz/fuzz/fuzz_targets/map.rs
        protobuf-fuzz/fuzz/fuzz_targets/map_read.rs
        protobuf-fuzz/fuzz/fuzz_targets/repeated.rs
        protobuf-fuzz/fuzz/fuzz_targets/repeated_read.rs
        protobuf-fuzz/fuzz/fuzz_targets/singular.rs
        protobuf-fuzz/fuzz/fuzz_targets/singular_read.rs
        protobuf-fuzz/fuzz/Cargo.toml
        protobuf-fuzz/src/all_types_pb.proto
        protobuf-fuzz/src/lib.rs
        protobuf-fuzz/build.rs
        protobuf-fuzz/Cargo.toml
        protobuf-test/src/common/v2/test_basic.rs
        protobuf-test/src/common/v2/test_basic_pb.proto
        protobuf-test/src/common/v2/test_carllerche_bytes.rs
        protobuf-test/src/common/v2/test_carllerche_bytes_pb.proto
        protobuf-test/src/common/v2/test_default.rs
        protobuf-test/src/common/v2/test_default_pb.proto
        protobuf-test/src/common/v2/test_enable_lite_runtime.rs
        protobuf-test/src/common/v2/test_enable_lite_runtime_pb.proto
        protobuf-test/src/common/v2/test_enum_alias.rs
        protobuf-test/src/common/v2/test_enum_alias_pb.proto
        protobuf-test/src/common/v2/test_enum_unknown_values_preserved.rs
        protobuf-test/src/common/v2/test_enum_unknown_values_preserved_pb.proto
        protobuf-test/src/common/v2/test_enum_values.rs
        protobuf-test/src/common/v2/test_enum_values_pb.proto
        protobuf-test/src/common/v2/test_ext.rs
        protobuf-test/src/common/v2/test_ext_pb.proto
        protobuf-test/src/common/v2/test_fmt_json.rs
        protobuf-test/src/common/v2/test_fmt_json_pb.proto
        protobuf-test/src/common/v2/test_fmt_json_well_known.rs
        protobuf-test/src/common/v2/test_fmt_json_well_known_pb.proto
        protobuf-test/src/common/v2/test_fmt_text_format.rs
        protobuf-test/src/common/v2/test_fmt_text_format_0.rs
        protobuf-test/src/common/v2/test_fmt_text_format_0_pb.proto
        protobuf-test/src/common/v2/test_fmt_text_format_pb.proto
        protobuf-test/src/common/v2/test_generate_accessors.rs
        protobuf-test/src/common/v2/test_generate_accessors_pb.proto
        protobuf-test/src/common/v2/test_ident.rs
        protobuf-test/src/common/v2/test_ident_pb.proto
        protobuf-test/src/common/v2/test_import_descriptor.rs
        protobuf-test/src/common/v2/test_import_descriptor_pb.proto
        protobuf-test/src/common/v2/test_lite_runtime.rs
        protobuf-test/src/common/v2/test_lite_runtime_pb.proto
        protobuf-test/src/common/v2/test_map_carllerche.rs
        protobuf-test/src/common/v2/test_map_carllerche_pb.proto
        protobuf-test/src/common/v2/test_map_simple.rs
        protobuf-test/src/common/v2/test_map_simple_pb.proto
        protobuf-test/src/common/v2/test_nonunique_enum.rs
        protobuf-test/src/common/v2/test_nonunique_enum_pb.proto
        protobuf-test/src/common/v2/test_oneof.rs
        protobuf-test/src/common/v2/test_oneof_expose.rs
        protobuf-test/src/common/v2/test_oneof_expose_pb.proto
        protobuf-test/src/common/v2/test_oneof_pb.proto
        protobuf-test/src/common/v2/test_oneof_recursive.rs
        protobuf-test/src/common/v2/test_oneof_recursive_pb.proto
        protobuf-test/src/common/v2/test_reflect.rs
        protobuf-test/src/common/v2/test_reflect_pb.proto
        protobuf-test/src/common/v2/test_repeated_field_vec.rs
        protobuf-test/src/common/v2/test_repeated_field_vec_pb.proto
        protobuf-test/src/common/v2/test_repeated_packed.rs
        protobuf-test/src/common/v2/test_repeated_packed_pb.proto
        protobuf-test/src/common/v2/test_root.rs
        protobuf-test/src/common/v2/test_root_pb.proto
        protobuf-test/src/common/v2/test_serde_derive.rs
        protobuf-test/src/common/v2/test_serde_derive_pb.proto
        protobuf-test/src/common/v2/test_singular_concat.rs
        protobuf-test/src/common/v2/test_singular_concat_pb.proto
        protobuf-test/src/common/v2/test_singular_field_option.rs
        protobuf-test/src/common/v2/test_singular_field_option_pb.proto
        protobuf-test/src/common/v2/test_sync.rs
        protobuf-test/src/common/v2/test_sync_pb.proto
        protobuf-test/src/common/v2/test_well_known_types.rs
        protobuf-test/src/common/v2/test_well_known_types_pb.proto
        protobuf-test/src/common/mod.rs
        protobuf-test/src/google/protobuf/import-tests.sh
        protobuf-test/src/google/protobuf/README.md
        protobuf-test/src/google/protobuf/unittest.proto
        protobuf-test/src/google/protobuf/unittest_arena.proto
        protobuf-test/src/google/protobuf/unittest_custom_options.proto
        protobuf-test/src/google/protobuf/unittest_drop_unknown_fields.proto
        protobuf-test/src/google/protobuf/unittest_embed_optimize_for.proto
        protobuf-test/src/google/protobuf/unittest_empty.proto
        protobuf-test/src/google/protobuf/unittest_import.proto
        protobuf-test/src/google/protobuf/unittest_import_lite.proto
        protobuf-test/src/google/protobuf/unittest_import_public.proto
        protobuf-test/src/google/protobuf/unittest_import_public_lite.proto
        protobuf-test/src/google/protobuf/unittest_lazy_dependencies.proto
        protobuf-test/src/google/protobuf/unittest_lazy_dependencies_custom_option.proto
        protobuf-test/src/google/protobuf/unittest_lazy_dependencies_enum.proto
        protobuf-test/src/google/protobuf/unittest_lite.proto
        protobuf-test/src/google/protobuf/unittest_lite_imports_nonlite.proto
        protobuf-test/src/google/protobuf/unittest_mset.proto
        protobuf-test/src/google/protobuf/unittest_mset_wire_format.proto
        protobuf-test/src/google/protobuf/unittest_no_arena.proto
        protobuf-test/src/google/protobuf/unittest_no_arena_import.proto
        protobuf-test/src/google/protobuf/unittest_no_arena_lite.proto
        protobuf-test/src/google/protobuf/unittest_no_field_presence.proto
        protobuf-test/src/google/protobuf/unittest_no_generic_services.proto
        protobuf-test/src/google/protobuf/unittest_optimize_for.proto
        protobuf-test/src/google/protobuf/unittest_preserve_unknown_enum.proto
        protobuf-test/src/google/protobuf/unittest_preserve_unknown_enum2.proto
        protobuf-test/src/google/protobuf/unittest_proto3_arena.proto
        protobuf-test/src/google/protobuf/unittest_proto3_arena_lite.proto
        protobuf-test/src/google/protobuf/unittest_proto3_lite.proto
        protobuf-test/src/google/protobuf/unittest_well_known_types.proto
        protobuf-test/src/google/mod.rs
        protobuf-test/src/interop/json.rs
        protobuf-test/src/interop/mod.rs
        protobuf-test/src/v2/struct.proto
        protobuf-test/src/v2/test-sanitize-file-name_pb.proto
        protobuf-test/src/v2/test_carllerche_bytes_default_value.rs
        protobuf-test/src/v2/test_carllerche_bytes_default_value_pb.proto
        protobuf-test/src/v2/test_default_values.rs
        protobuf-test/src/v2/test_default_values_pb.proto
        protobuf-test/src/v2/test_group_pb.proto
        protobuf-test/src/v2/test_import_nested_imported_pb.proto
        protobuf-test/src/v2/test_import_nested_pb.proto
        protobuf-test/src/v2/test_import_nonunique_1_pb.proto
        protobuf-test/src/v2/test_import_nonunique_2_pb.proto
        protobuf-test/src/v2/test_import_nonunique_pb.proto
        protobuf-test/src/v2/test_import_pkg_nested_imported_pb.proto
        protobuf-test/src/v2/test_import_pkg_nested_pb.proto
        protobuf-test/src/v2/test_import_root_imported_pb.proto
        protobuf-test/src/v2/test_import_root_pb.proto
        protobuf-test/src/v2/test_oneof_default_value.rs
        protobuf-test/src/v2/test_oneof_default_value_pb.proto
        protobuf-test/src/v2/test_oneof_group.rs
        protobuf-test/src/v2/test_oneof_group_pb.proto
        protobuf-test/src/v2/test_required.rs
        protobuf-test/src/v2/test_required_pb.proto
        "protobuf-test/src/v2/test_special~characters file{name}_pb.proto"
        protobuf-test/src/v2/test_unknown_suffix.rs
        protobuf-test/src/v2/test_unknown_suffix_pb.proto3
        protobuf-test/src/v3/test_ident_pb.proto
        protobuf-test/src/v3/test_issue_190_pb.proto
        protobuf-test/src/v3/test_zeros_are_not_written.rs
        protobuf-test/src/v3/test_zeros_are_not_written_pb.proto
        protobuf-test/src/lib.rs
        protobuf-test/build.rs
        protobuf-test/Cargo.toml
        protobuf-test/README.md
        protobuf-test/test.sh
        protobuf-test-common/src/build.rs
        protobuf-test-common/src/hex.rs
        protobuf-test-common/src/json_tests.rs
        protobuf-test-common/src/lib.rs
        protobuf-test-common/src/reflect_tests.rs
        protobuf-test-common/src/serialize_deserialize_tests.rs
        protobuf-test-common/src/text_format_tests.rs
        protobuf-test-common/Cargo.toml
        protoc/src/lib.rs
        protoc/test-protoc/src/data.proto
        protoc/test-protoc/src/lib.rs
        protoc/test-protoc/build.rs
        protoc/test-protoc/Cargo.toml
        protoc/Cargo.toml
        protoc/LICENSE.txt
        protoc/README.md
        protoc/test.sh
        protoc-rust/src/lib.rs
        protoc-rust/Cargo.toml
        protoc-rust/LICENSE.txt
        protoc-rust/README.md
        Cargo.toml
        CHANGELOG.md
        CONTRIBUTING.md
        FAQ.md
        LICENSE.txt
        README.md)
